.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost-gitlab-to-keycloak-oauth-adapter
  namespace: mattermost
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gitlab.chloyka.com
      secretName: gitlab.chloyka.com-tls
  rules:
    - host: gitlab.chloyka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost-gitlab-to-keycloak-oauth-adapter
                port:
                  name: http
